--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,35 +1,23 @@
-main {
-    max-width: 900px;
-    margin: 0 auto;
+nav {
+    background-color: darkblue;
+    padding: 10px;
+
 }
 
-aside {
-    width: 20em;
-    margin: 1em;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    padding: 1em;
-    background-color: #eee;
-    color: #333;
-    text-align: center;
+nav a {
+    color: white;
+    display: block;
+    padding: 20px;
 }
 
-aside img {
-    width: 200px;
-    height: auto;
-}
-
-main img {
+img {
     width: 150px;
     height: auto;
-    /* other styles */
+    border: 1px solid black;
+    padding: 2px;
+    box-shadow: 0 0 30px gray;
 }
 
 p {
-    padding: 0;
-}
-
-footer {
-    margin-top: 1em;
-    border-top: 1px solid #000;
-    text-align: center;
+    padding: 10px;
 }
